--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,22 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-
-    <title>R7 FrontEnd Test</title>
-
-    <link rel="stylesheet" href="stylesheets/style.css" media="all">
-  </head>
-  <body>
+<html lang=”en”>
+   <head>
+      <meta charset="UTF-8">
+      <title>R7 FrontEnd Test</title>
+      <link rel="stylesheet" href="stylesheets/style.css" media="all">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+      <link href="https://fonts.googleapis.com/css?family=
+                  :400,700" rel="stylesheet">
+      <script type="text/javascript" src="javascripts/jquery.js"></script>
+      <script type="text/javascript" src="javascripts/main.js"></script>
+   </head>
+   <body>
       <!-- let's code :D -->
-
-    <script src="javascripts/main.js"></script> 
+      <section id="topo">
+         <img src="images/logotipo.png" alt="">
+         <h1>Ranking</h1>
+      </section>
+      <section id="ranking" class="list-group"></section>
+   </body>
 </html>
