--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/css?family=
                   :400,700" rel="stylesheet">
-      <script type="text/javascript" src="javascripts/jquery.js"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type="text/javascript" src="javascripts/main.js"></script>
    </head>
    <body>
